--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.1",
+    "swagger-ui-react": "^3.52.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
