--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "convert-css": "^0.1.3",
+    "core-js": "^3.18.0",
+    "mobx": "^6.3.3",
     "raw.macro": "^0.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
     "react-html-parser": "^2.0.2",
     "react-scripts": "4.0.3",
+    "redoc": "^2.0.0-rc.56",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.1",
