--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mobx": "^6.3.3",
     "raw.macro": "^0.4.2",
     "react": "^17.0.2",
+    "react-code-blocks": "0.0.9-0",
     "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
     "react-html-parser": "^2.0.2",
